Add enhancements
